name:                WaitForDownload
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WaitForDownload#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Klink
maintainer:          git@alech.de
copyright:           2018 Alexander Klink
category:            Command Line Tool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable waitfordownload
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hinotify
                     , bytestring
